# rust-websocket-chat

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: db.rs  lib.rs  main.rs  message.rs  room.rs  state.rs  ws.rs
tests/: integration_tests.rs
