[package]
name = "websocket-chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"

[lib]
name = "websocket_chat_server"
path = "src/lib.rs"
